fix main page alignment

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -627,7 +627,7 @@ div.sponsor {
 
 div.split {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
 
   div.right {
